--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav id="navbar">
             <ul>
-                <li><a href="#">關於我們</a></li>
+                <li><a href="#">首頁</a></li>
                 <li><a href="#">最新消息</a></li>
                 <li><a href="#">場地介紹</a></li>
                 <li><a href="#">課程介紹</a></li>
@@ -25,11 +25,28 @@
         <div class="icons">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-line"></i></a>
             <div id="menubtn" class="fa-solid fa-bars"></div>
         </div>
     </header>
 
 <!-- header section ends -->
+
+<!-- home section starts -->
+    <section class="home" id="home">
+        <div class="home-left">
+            <h1><span>曜</span>健身運動館</h1>
+            <h3><span>霧峰</span></span>全新型態健身房<br>高效燃脂課程，專業教練協助</h3>
+            <div class="btn">
+                <a href="#">立即參觀</a>
+            </div>
+        </div>
+        <div class="home-right">
+            <video src="images/home-2.mp4" controls="true" muted="true" autoplay="true" loop="true"></video>
+        </div> 
+    </section>
+
+<!-- home section ends -->
 
     <script src="https://kit.fontawesome.com/5ed6520c8d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
