--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <!-- home section starts -->
     <section class="home" id="home">
         <div class="home-left">
-            <h1><span>曜</span>健身運動館</h1>
-            <h3><span>霧峰</span></span>全新型態健身房<br>高效燃脂課程，專業教練協助</h3>
+            <h1 class="anim"><span>曜</span>健身運動館</h1>
+            <h3 class="anim"><span>霧峰</span></span>全新型態健身房<br>高效燃脂課程，專業教練協助</h3>
             <div class="btn">
-                <a href="#">立即參觀</a>
+                <a href="#" class="anim">立即參觀</a>
             </div>
         </div>
         <div class="home-right">
-            <video src="images/home-2.mp4" controls="true" muted="true" autoplay="true" loop="true"></video>
+            <video src="images/home-2.mp4" controls="true" muted="true" autoplay="true" loop="true" class="anim"></video>
         </div> 
     </section>
 
