--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <!-- header section ends -->
 
 <!-- home section starts -->
+
     <section class="home" id="home">
         <div class="home-left">
             <h1 class="anim"><span>曜</span>健身運動館</h1>
@@ -47,6 +48,45 @@
     </section>
 
 <!-- home section ends -->
+
+<!-- news section starts -->
+
+    <section class="news" id="news">
+        <h1 class="sub-title">最新消息</h1>
+        <div class="news-list">
+            <div class="new">
+                <img src="images/news-1.jpg">
+                <div class="layer">
+                    <p>母親節限定，首月1元</p>
+                    <a href="#">了解更多</a>
+                </div>
+            </div>
+            <div class="new">
+                <img src="images/news-2.jpg">
+                <div class="layer">
+                    <p>防疫公告</p>
+                    <a href="#">了解更多</a>
+                </div>
+            </div>
+            <div class="new">
+                <img src="images/news-3.jpg">
+                <div class="layer">
+                    <p>營業公告</p>
+                    <a href="#">了解更多</a>
+                </div>
+            </div>
+            <div class="new">
+                <img src="images/news-4.jpg">
+                <div class="layer">
+                    <p>春節休館</p>
+                    <a href="#">了解更多</a>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+
+<!-- news section ends -->
 
     <script src="https://kit.fontawesome.com/5ed6520c8d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
