--- a/index.html
+++ b/index.html
@@ -136,24 +136,43 @@
                             <li>背部訓練 (Back Stretcher)</li>
                             <li>站姿抬腿 (Leg Raise)</li>
                             <li>二頭捲曲 (Biceps Curl / Trice Extension)</li>
+                            <li>划船 (Rowing Machine)</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="machine">
                         <ul>
-                            <li>胸推 (Chest Press/Row)</li>
-                            <li>腿部伸展 (Leg Extension/Curl)</li>
-                            <li>推舉 (Overhead Press/Pulldow)</li>
-                            <li>腹部緊縮 (Ab Crunch / Back Extension)</li>
-                            <li>腿舉 (Leg Press)</li>
-                            <li>深蹲 (Squats)</li>
-                            <li>飛輪 (Spinning bike)</li>
-                            <li>背部訓練 (Back Stretcher)</li>
-                            <li>站姿抬腿 (Leg Raise)</li>
-                            <li>二頭捲曲 (Biceps Curl / Trice Extension)</li>
+                            <li>二頭肌伸展 (Arm Curl)</li>
+                            <li>坐式蹬腿訓練 (Leg Press/Curl)</li>
+                            <li>肩推 (Shoulder Press)</li>
+                            <li>胸肩飛鳥 (Pec Fly / Rear Delt)</li>
+                            <li>坐姿腿彎舉 (Seated Leg Curl)</li>
+                            <li>坐式背肌訓練 (Vertical Row)</li>
+                            <li>坐姿下拉 (Impulse Lat Pulldown)</li>
+                            <li>腿部彎舉 (Leg Extension/Curl)</li>
+                            <li>臀推機 (Hip Thrust)</li>
+                            <li>大腿外展內縮 (Abductor / Adductor)</li>
+                            <li>引體向上 (Pull-up)</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="barbell"></div>
-                    <div class="tab-contents" id="other"></div>
+                    <div class="tab-contents" id="barbell">
+                        <ul>
+                            <li>史密斯機 (Smith Machine)</li>
+                            <li>多用途負重訓練機 (Half Power Rack)</li>
+                            <li>上斜臥推 (Incline Bench Press)</li>
+                            <li>雙可調皮帶輪機 (Dual Adjustable Pulley Machine)</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="other">
+                        <ul>
+                            <li>跑步機 (Running Machine)</li>
+                            <li>壺鈴 (Kettlebell)</li>
+                            <li>啞鈴 (Dumbbell)</li>
+                            <li>拉力帶 (Lifting Straps)</li>
+                            <li>藥球 (Medicine Ball)</li>
+                            <li>瑜珈墊 (Yoga Mat)</li>
+                            <li>戰繩 (Battling Ropes)</li>
+                        </ul>
+                    </div>
                 </div>
             </div> 
         </div>
