--- a/index.html
+++ b/index.html
@@ -180,6 +180,31 @@
 
 <!-- site section starts -->
 
+<!-- course section starts -->
+
+    <section class="course" id="course">
+        <h1 class="sub-title">課程介紹</h1>
+        <div class="container">
+            <div class="box">
+                <img src="images/course-1.jpg">
+                <h3>自由重量訓練</h3>
+                <p>用槓鈴、啞鈴訓練叫自由重量，使用自由重量時，能鍛鍊你控制重量的能力和肌肉協調能力，也能充分刺激更多的肌肉</p>
+            </div>
+            <div class="box">
+                <img src="images/course-2.jpg">
+                <h3>機械器材訓練</h3>
+                <p>固定式機械式器材它的設計上只需要依照個人的身型適當的調整，在坐姿、臥姿等訓練動作上，提供身體的接觸較多的面積</p>
+            </div>
+            <div class="box">
+                <img src="images/course-3.jpg">
+                <h3>有氧訓練</h3>
+                <p>適當的有氧運動除了可以增加心肺訓練功能，增加肌力，還可讓關節液潤滑關節，提供軟骨所需的營養，保護關節</p>
+            </div>
+        </div>
+    </section>
+
+<!-- course section starts -->
+
     <script src="https://kit.fontawesome.com/5ed6520c8d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
