--- a/index.html
+++ b/index.html
@@ -205,6 +205,46 @@
 
 <!-- course section starts -->
 
+<!-- contact section starts -->
+
+    <section class="contact" id="contact">
+        <h1 class="sub-title">聯絡我們</h1>
+        <div class="container">
+            <div class="contact-left">
+                <ul class="inf">
+                    <li><i class="fa-solid fa-location-dot"></i>413台中市霧峰區中正路1055號3樓</li>
+                    <li><i class="fa-solid fa-phone"></i>0423301158</li>
+                    <li><i class="fa-brands fa-line"></i><a href="#">lin.ee</a></li>
+                    <li><i class="fa-solid fa-clock"></i>營業時間 : 
+                        <ul class="time">
+                            <li>星期日	休息</li>
+                            <li>星期一	09:00–12:00, 14:00–22:00</li>
+                            <li>星期二	09:00–12:00, 14:00–22:00</li>
+                            <li>星期三	09:00–12:00, 14:00–22:00</li>
+                            <li>星期四	09:00–12:00, 14:00–22:00</li>
+                            <li>星期五	09:00–12:00, 14:00–22:00</li>
+                            <li>星期六	09:00–12:00</li>
+                        </ul>   
+                    </li>
+                </ul>
+                <!-- <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div> -->
+            </div>
+            <div class="contact-right">
+                <form action="#">
+                    <input type="text" name="name" placeholder="名字">
+                    <input type="email" name="email" placeholder="信箱">
+                    <textarea name="message" rows="6" placeholder="訊息"></textarea>
+                    <button type="submit" class="btn2">送出</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+<!-- contact section starts -->
+
     <script src="https://kit.fontawesome.com/5ed6520c8d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
