--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <nav id="navbar">
             <ul>
-                <li><a href="#">首頁</a></li>
-                <li><a href="#">最新消息</a></li>
-                <li><a href="#">場地介紹</a></li>
-                <li><a href="#">課程介紹</a></li>
-                <li><a href="#">聯絡我們</a></li>
+                <li><a href="#home">首頁</a></li>
+                <li><a href="#news">最新消息</a></li>
+                <li><a href="#site">場地介紹</a></li>
+                <li><a href="#course">課程介紹</a></li>
+                <li><a href="#contact">聯絡我們</a></li>
             </ul>
         </nav>
 
@@ -227,10 +227,6 @@
                         </ul>   
                     </li>
                 </ul>
-                <!-- <div class="icons">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                </div> -->
             </div>
             <div class="contact-right">
                 <form action="#">
@@ -244,6 +240,19 @@
     </section>
 
 <!-- contact section starts -->
+
+<!-- footer section starts -->
+
+    <div class="footer">
+        <div class="icons">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-line"></i></a>
+        </div>
+        <p>Copyright © Yan-Cheng by web-practice</p>
+    </div>
+
+<!-- footer section starts -->
 
     <script src="https://kit.fontawesome.com/5ed6520c8d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
